app/assets/stylesheets/about.css.scss
// Place all the styles related to the about controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/*Bio*/
.bio {
  /*border-left: 2px solid #555;*/
  margin-left: 20px;
  height: 2000px;
  margin-top: -30px;
}

.blurb {
  padding-top: 20px;
  padding-left: 20px;
  p, li {
    font-size: 30px;
    color: #555;
    font-family: Lato;
    line-height: 35px;
  }
}

.page-header-unpredictable {
  margin-top: 120px;
  padding-left: 30px;
  padding-bottom: 10px;
  margin-bottom: 40px;
  color: #8A8AE6;
  font-family: Ostrich Sans Rounded;
  font-size: 90px;
  border-bottom: 2px solid #aaa;
  width: 50%;
}
.life-pts {
  font-family: Lato;
  color: #555;
  img {
    width: 100px;
    height: 80px;
    margin: 20px;
    float: left;
  }
  p {
    font-size: 20px;
    line-height: 25px;
    padding-left: 280px;
  }
  h3 {
    padding-left: 280px;
  }
}

.ror {
  width: 100px;
  height: 80px;
  margin: 20px;
}


/*Skills*/

ul.skills {
  float: left;
  list-style-type: none;
  padding: 20px;
  font-family: Lato;
  color: #fff;
  margin-left: 30px;

  li {
    padding-bottom: 7px;
    font-size: 18px;
  }
  h3 {
    font-size: 35px;
  }
}


.skillbox {
  background-color: rgba(0,0,0,0.7);
  float: right;
  margin-top: -32px;
  padding: 40px;
  height: 1200px;
  width: 50%;
  h1 {
    color: white;
    padding-top: 20px;
  }
}



.github-icon, .email-icon, .linkedin-icon {
  float: left;
  padding-bottom: 20px;
  a:hover {
    text-decoration: none;
    background-color: transparent;
    color: #fff;
  }
}

.github-icon {
  margin-left: 30px;
  margin-top: 2px;
  margin-right: 10px;
}

.email-icon p {
  padding-top: 4px;
}

.skillsets {
  clear: both;
}


/*old layout*/
.fa.fa-check {
  color: #8A8AE6;
  padding-left: 16px;
}

.fa-minus {
  color: #8A8AE6;
  padding-left: 20px;
}

.cloud {
  padding-top: 30px;
  height: 90%;
  width: 90%;
}

.resources {
  font-family: Lato;
  font-weight: 700;
}

.aboutlist {
  /*list-style-type: none;*/
  font-size: 20px;
  font-family: Lato;
  padding-top: 15px;
  padding-bottom: 20px;
}

.about {
  clear: both;
  position: relative;
  /*padding-top: 100px;*/
}

